# walmart_sale_mlops

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml  logging_config.yaml
models/: champion_model.pkl  preprocessing_pipeline.pkl
pipelines/: explain_pipeline.py  train_pipeline.py
reports/explainability/: lime_explanation_sample_0.html  lime_explanation_sample_1.html  lime_explanation_sample_2.html  lime_explanation_sample_3.html  lime_explanation_sample_4.html  shap_values.npy  training_summary.json
src/: config.py  logger.py
src/api/: main.py  router.py  schemas.py
src/data/: loader.py  preprocessor.py  splitter.py
src/evaluation/: metrics.py
src/explainability/: lime_explainer.py  shap_explainer.py
src/models/: registry.py  trainer.py
tests/: conftest.py
tests/api/: test_endpoints.py
tests/integration/: test_explain_pipeline.py  test_train_pipeline.py
tests/unit/: test_config.py  test_loader.py  test_metrics.py  test_preprocessor.py  test_schemas.py
